trabajando con collecciones set y collect